# grpc-scone-example

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Makefile  build.rs
docker/: Dockerfile  Dockerfile.sgx
src/: main.rs
src/proto/: mod.rs
src/rpc/: greeter.rs  mod.rs
src/utils/: sync.rs
