[package]
name = "grpc-example"
version = "0.1.0"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# grpcio = { version = "0.5.0-alpha.1", features = ["secure", "prost-codec"] }

# prost = "0.5"
# bytes = "0.4"
# # Only necessary if using Protobuf well-known types:
# # prost-types = "0.5"

signal-hook = "0.1"

futures = "0.1"
# futures-preview = "0.3.0-alpha.16"

grpc = "0.6"
protobuf = "2.7"


[build-dependencies]
protoc-rust-grpc = "0.6.1"
# grpcio-compiler = "0.5.0-alpha"
